@@ -3,6 +3,7 @@ Changes for 3.2.6rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-12121] fixed problem generation by timer process (gleb)
 ..F....... [ZBX-11530] fixed status of application inheritance from template in API::Application()->get() call (miks)
 ..F....... [ZBX-11536] fixed missing operator in event correlation form (miks)
 ..F....... [ZBX-11309] fixed collision of cookies name responsible for storing selected checkboxes (miks)
